Bringing edits up to date.

--- a/_out/about-this-document.html
+++ b/_out/about-this-document.html
@@ -196,14 +196,14 @@ R&gt; locale:
 R&gt; [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
 R&gt; 
 R&gt; attached base packages:
-R&gt; [1] stats     graphics  grDevices utils     datasets  base     
+R&gt; [1] stats     grDevices utils     datasets  graphics  base     
 R&gt; 
 R&gt; loaded via a namespace (and not attached):
 R&gt;  [1] Rcpp_0.12.15    bookdown_0.6    png_0.1-7       digest_0.6.14  
 R&gt;  [5] rprojroot_1.3-2 backports_1.1.2 magrittr_1.5    evaluate_0.10.1
 R&gt;  [9] highr_0.6       stringi_1.1.6   rmarkdown_1.8   tools_3.4.3    
 R&gt; [13] stringr_1.2.0   xfun_0.1        yaml_2.1.16     compiler_3.4.3 
-R&gt; [17] htmltools_0.3.6 knitr_1.18      methods_3.4.3</code></pre>
+R&gt; [17] htmltools_0.3.6 knitr_1.19      methods_3.4.3</code></pre>
 
 </div>
 <!-- </div> -->
