--- a/_out/data-classes.html
+++ b/_out/data-classes.html
@@ -166,11 +166,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.2" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html"><i class="fa fa-check"></i><b>3.2</b> Measures of central tendency</a><ul>
 <li class="chapter" data-level="3.2.1" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#the-mean"><i class="fa fa-check"></i><b>3.2.1</b> The mean</a></li>
 <li class="chapter" data-level="3.2.2" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#the-median"><i class="fa fa-check"></i><b>3.2.2</b> The median</a></li>
+<li class="chapter" data-level="3.2.3" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#central-moment"><i class="fa fa-check"></i><b>3.2.3</b> Central moment</a></li>
+<li class="chapter" data-level="3.2.4" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#skewness"><i class="fa fa-check"></i><b>3.2.4</b> Skewness</a></li>
+<li class="chapter" data-level="3.2.5" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#kurtosis"><i class="fa fa-check"></i><b>3.2.5</b> Kurtosis</a></li>
 </ul></li>
 <li class="chapter" data-level="3.3" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html"><i class="fa fa-check"></i><b>3.3</b> Measures of variation and spread</a><ul>
 <li class="chapter" data-level="3.3.1" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#the-variance-and-standard-deviation"><i class="fa fa-check"></i><b>3.3.1</b> The variance and standard deviation</a></li>
 <li class="chapter" data-level="3.3.2" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#quantiles"><i class="fa fa-check"></i><b>3.3.2</b> Quantiles</a></li>
 <li class="chapter" data-level="3.3.3" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#the-minimum-maximum-and-range"><i class="fa fa-check"></i><b>3.3.3</b> The minimum, maximum and range</a></li>
+<li class="chapter" data-level="3.3.4" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#covariance"><i class="fa fa-check"></i><b>3.3.4</b> Covariance</a></li>
+<li class="chapter" data-level="3.3.5" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#correlation"><i class="fa fa-check"></i><b>3.3.5</b> Correlation</a></li>
 </ul></li>
 <li class="chapter" data-level="3.4" data-path="missing-values-1.html"><a href="missing-values-1.html"><i class="fa fa-check"></i><b>3.4</b> Missing values</a></li>
 <li class="chapter" data-level="3.5" data-path="descriptive-statistics-by-group.html"><a href="descriptive-statistics-by-group.html"><i class="fa fa-check"></i><b>3.5</b> Descriptive statistics by group</a><ul>
@@ -181,7 +186,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.6.1" data-path="exercises.html"><a href="exercises.html#exercise-1"><i class="fa fa-check"></i><b>3.6.1</b> Exercise 1</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="graphical-data-displays.html"><a href="graphical-data-displays.html"><i class="fa fa-check"></i><b>4</b> Graphical data displays</a></li>
+<li class="chapter" data-level="4" data-path="graphical-data-displays.html"><a href="graphical-data-displays.html"><i class="fa fa-check"></i><b>4</b> Graphical data displays</a><ul>
+<li class="chapter" data-level="4.1" data-path="frequency-distributions.html"><a href="frequency-distributions.html"><i class="fa fa-check"></i><b>4.1</b> Frequency distributions</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="frequency-distributions.html"><a href="frequency-distributions.html#qualitative-data-1"><i class="fa fa-check"></i><b>4.1.1</b> Qualitative data</a></li>
+<li class="chapter" data-level="4.1.2" data-path="frequency-distributions.html"><a href="frequency-distributions.html#continuous-data-1"><i class="fa fa-check"></i><b>4.1.2</b> Continuous data</a></li>
+</ul></li>
+<li class="chapter" data-level="4.2" data-path="bar-graphs.html"><a href="bar-graphs.html"><i class="fa fa-check"></i><b>4.2</b> Bar graphs</a></li>
+<li class="chapter" data-level="4.3" data-path="pie-graphs.html"><a href="pie-graphs.html"><i class="fa fa-check"></i><b>4.3</b> Pie graphs (!!!)</a></li>
+<li class="chapter" data-level="4.4" data-path="category-statistics.html"><a href="category-statistics.html"><i class="fa fa-check"></i><b>4.4</b> Category statistics</a></li>
+</ul></li>
 <li class="chapter" data-level="5" data-path="distributions.html"><a href="distributions.html"><i class="fa fa-check"></i><b>5</b> Distributions</a><ul>
 <li class="chapter" data-level="5.1" data-path="polygon-plots.html"><a href="polygon-plots.html"><i class="fa fa-check"></i><b>5.1</b> Polygon plots</a></li>
 </ul></li>
@@ -268,6 +281,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="continuous-data" class="section level4">
 <h4><span class="header-section-number">2.1.1.2</span> Continuous data</h4>
 <p>These usually represent measured ‘things,’ such as something’s heat content (temperature, measured in degrees Celsius) or distance (measured in metres or similar), etc. They can be rational numbers including integers and fractions, but typically they have an infinite number of ‘steps’ that depends on rounding (they can even be rounded to whole integers) or considerations such as measurement precision and accuracy. Often, continuous data have upper and lower bounds that depend on the characteristics of the phenomenon being studied or the measurement being taken. In R, continuous data are denoted <code>num</code> or <code>&lt;dbl&gt;</code>.</p>
+<p>The kinds of summaries that lend themselves to continuous data are:</p>
+<ul>
+<li>Frequency distributions</li>
+<li>Relative frequency distributions</li>
+<li>Cumulative frequency distributions</li>
+<li>Bar graphs</li>
+<li>Box plots</li>
+<li>Scatter plots</li>
+</ul>
 </div>
 <div id="dates" class="section level4">
 <h4><span class="header-section-number">2.1.1.3</span> Dates</h4>
@@ -279,7 +301,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Qualitative data may be well-defined categories or they may be subjective, and generally include descriptive words for classes (e.g. mineral, animal , plant) or rankings (e.g. good, better, best).</p>
 <div id="categorical-data" class="section level4">
 <h4><span class="header-section-number">2.1.2.1</span> Categorical data</h4>
-<p>Also known as qualitative data. Because there are categories, the number of members belonging to each of the categories can be counted. For example, there are three red flowers, 66 purple flowers, and 13 yellow flowers. The categories cannot be ranked relative to each other; in the example just provided, for instance, no value judgement can be assigned to the different colours. It is not better to be red than it is to be purple. There are just fewer red flowers than purple ones. Contrast this to another kind of categorical data called ‘ordinal data’ (see next). This class of data in an R dataframe (or in a ‘tibble’) is indicated by <code>Factor</code> or <code>&lt;fctr&gt;</code>.</p>
+<p>Because there are categories, the number of members belonging to each of the categories can be counted. For example, there are three red flowers, 66 purple flowers, and 13 yellow flowers. The categories cannot be ranked relative to each other; in the example just provided, for instance, no value judgement can be assigned to the different colours. It is not better to be red than it is to be purple. There are just fewer red flowers than purple ones. Contrast this to another kind of categorical data called ‘ordinal data’ (see next). This class of data in an R dataframe (or in a ‘tibble’) is indicated by <code>Factor</code> or <code>&lt;fctr&gt;</code>.</p>
+<p>The kinds of summaries that lend themselves to categorical data are:</p>
+<ul>
+<li>Frequency distributions</li>
+<li>Relative frequency distributions</li>
+<li>Bar graphs</li>
+<li>Pie graphs (!!!)</li>
+<li>Category statistics</li>
+</ul>
 </div>
 <div id="ordinal-data" class="section level4">
 <h4><span class="header-section-number">2.1.2.2</span> Ordinal data</h4>
