--- a/_out/measures-of-central-tendency.html
+++ b/_out/measures-of-central-tendency.html
@@ -166,11 +166,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.2" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html"><i class="fa fa-check"></i><b>3.2</b> Measures of central tendency</a><ul>
 <li class="chapter" data-level="3.2.1" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#the-mean"><i class="fa fa-check"></i><b>3.2.1</b> The mean</a></li>
 <li class="chapter" data-level="3.2.2" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#the-median"><i class="fa fa-check"></i><b>3.2.2</b> The median</a></li>
+<li class="chapter" data-level="3.2.3" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#central-moment"><i class="fa fa-check"></i><b>3.2.3</b> Central moment</a></li>
+<li class="chapter" data-level="3.2.4" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#skewness"><i class="fa fa-check"></i><b>3.2.4</b> Skewness</a></li>
+<li class="chapter" data-level="3.2.5" data-path="measures-of-central-tendency.html"><a href="measures-of-central-tendency.html#kurtosis"><i class="fa fa-check"></i><b>3.2.5</b> Kurtosis</a></li>
 </ul></li>
 <li class="chapter" data-level="3.3" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html"><i class="fa fa-check"></i><b>3.3</b> Measures of variation and spread</a><ul>
 <li class="chapter" data-level="3.3.1" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#the-variance-and-standard-deviation"><i class="fa fa-check"></i><b>3.3.1</b> The variance and standard deviation</a></li>
 <li class="chapter" data-level="3.3.2" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#quantiles"><i class="fa fa-check"></i><b>3.3.2</b> Quantiles</a></li>
 <li class="chapter" data-level="3.3.3" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#the-minimum-maximum-and-range"><i class="fa fa-check"></i><b>3.3.3</b> The minimum, maximum and range</a></li>
+<li class="chapter" data-level="3.3.4" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#covariance"><i class="fa fa-check"></i><b>3.3.4</b> Covariance</a></li>
+<li class="chapter" data-level="3.3.5" data-path="measures-of-variation-and-spread.html"><a href="measures-of-variation-and-spread.html#correlation"><i class="fa fa-check"></i><b>3.3.5</b> Correlation</a></li>
 </ul></li>
 <li class="chapter" data-level="3.4" data-path="missing-values-1.html"><a href="missing-values-1.html"><i class="fa fa-check"></i><b>3.4</b> Missing values</a></li>
 <li class="chapter" data-level="3.5" data-path="descriptive-statistics-by-group.html"><a href="descriptive-statistics-by-group.html"><i class="fa fa-check"></i><b>3.5</b> Descriptive statistics by group</a><ul>
@@ -181,7 +186,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.6.1" data-path="exercises.html"><a href="exercises.html#exercise-1"><i class="fa fa-check"></i><b>3.6.1</b> Exercise 1</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="graphical-data-displays.html"><a href="graphical-data-displays.html"><i class="fa fa-check"></i><b>4</b> Graphical data displays</a></li>
+<li class="chapter" data-level="4" data-path="graphical-data-displays.html"><a href="graphical-data-displays.html"><i class="fa fa-check"></i><b>4</b> Graphical data displays</a><ul>
+<li class="chapter" data-level="4.1" data-path="frequency-distributions.html"><a href="frequency-distributions.html"><i class="fa fa-check"></i><b>4.1</b> Frequency distributions</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="frequency-distributions.html"><a href="frequency-distributions.html#qualitative-data-1"><i class="fa fa-check"></i><b>4.1.1</b> Qualitative data</a></li>
+<li class="chapter" data-level="4.1.2" data-path="frequency-distributions.html"><a href="frequency-distributions.html#continuous-data-1"><i class="fa fa-check"></i><b>4.1.2</b> Continuous data</a></li>
+</ul></li>
+<li class="chapter" data-level="4.2" data-path="bar-graphs.html"><a href="bar-graphs.html"><i class="fa fa-check"></i><b>4.2</b> Bar graphs</a></li>
+<li class="chapter" data-level="4.3" data-path="pie-graphs.html"><a href="pie-graphs.html"><i class="fa fa-check"></i><b>4.3</b> Pie graphs (!!!)</a></li>
+<li class="chapter" data-level="4.4" data-path="category-statistics.html"><a href="category-statistics.html"><i class="fa fa-check"></i><b>4.4</b> Category statistics</a></li>
+</ul></li>
 <li class="chapter" data-level="5" data-path="distributions.html"><a href="distributions.html"><i class="fa fa-check"></i><b>5</b> Distributions</a><ul>
 <li class="chapter" data-level="5.1" data-path="polygon-plots.html"><a href="polygon-plots.html"><i class="fa fa-check"></i><b>5.1</b> Polygon plots</a></li>
 </ul></li>
@@ -257,9 +270,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="measures-of-central-tendency" class="section level2">
 <h2><span class="header-section-number">3.2</span> Measures of central tendency</h2>
-<table style="width:39%;">
+<table style="width:67%;">
 <caption>Measures of central tendency.</caption>
 <colgroup>
+<col width="27%" />
 <col width="19%" />
 <col width="19%" />
 </colgroup>
@@ -267,16 +281,34 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <tr class="header">
 <th align="left">Statistic</th>
 <th align="left">Function</th>
+<th align="left">Package</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">Mean</td>
 <td align="left"><code>mean()</code></td>
+<td align="left"><strong>base</strong></td>
 </tr>
 <tr class="even">
 <td align="left">Median</td>
 <td align="left"><code>median()</code></td>
+<td align="left"><strong>base</strong></td>
+</tr>
+<tr class="odd">
+<td align="left">Central moment</td>
+<td align="left"><code>moment()</code></td>
+<td align="left"><strong>e1071</strong></td>
+</tr>
+<tr class="even">
+<td align="left">Skewness</td>
+<td align="left"><code>skewness()</code></td>
+<td align="left"><strong>e1071</strong></td>
+</tr>
+<tr class="odd">
+<td align="left">Kurtosis</td>
+<td align="left"><code>kurtosis()</code></td>
+<td align="left"><strong>e1071</strong></td>
 </tr>
 </tbody>
 </table>
@@ -336,6 +368,18 @@ R&gt;   med_wt
 R&gt;    &lt;dbl&gt;
 R&gt; 1   103.</code></pre>
 <p>The median is therefore the value that separates the lower half of the sample data from the upper half. In normally distributed continuous data the median is equal to the mean. Comparable concepts to the median are the <em>1st and 3rd quartiles</em>, which, respectively, separate the first quarter of the data from the last quarter — see later. The advantage of the median over the mean is that it is unaffected (i.e. not skewed) by extreme values or outliers, and it gives an idea of the typical value of the sample. The median is also used to provide a robust description of non-parametric data (see Chapter 4 for a discussion on normal data and other data distributions).</p>
+</div>
+<div id="central-moment" class="section level3">
+<h3><span class="header-section-number">3.2.3</span> Central moment</h3>
+<!-- insert some stuff here -->
+</div>
+<div id="skewness" class="section level3">
+<h3><span class="header-section-number">3.2.4</span> Skewness</h3>
+<!-- insert some stuff here -->
+</div>
+<div id="kurtosis" class="section level3">
+<h3><span class="header-section-number">3.2.5</span> Kurtosis</h3>
+<!-- insert some stuff here -->
 </div>
 </div>
             </section>
