--- a/_out/index.html
+++ b/_out/index.html
@@ -22,7 +22,7 @@
   <meta name="twitter:description" content="This is a book about basic statistics: theory and practice." />
   <meta name="twitter:image" content="figures/NSFW.jpg" />
 
-<meta name="author" content="AJ Smit">
+<meta name="author" content="AJ Smit and Robert Schlegel">
 
 
 <meta name="date" content="2018-04-01">
@@ -299,7 +299,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Basic Statistics</h1>
 <h3 class="subtitle"><em>A primer in basic statistics for BCB (Hons) 2018</em></h3>
-<h4 class="author"><em>AJ Smit</em></h4>
+<h4 class="author"><em>AJ Smit and Robert Schlegel</em></h4>
 <h4 class="date"><em>2018-04-01</em></h4>
 </div>
 <div id="preface" class="section level1 unnumbered">
