--- a/_out/generalised-linear-models.html
+++ b/_out/generalised-linear-models.html
@@ -32,8 +32,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="index.html">
-<link rel="next" href="introduction.html">
+<link rel="prev" href="testing-assumptions-or-how-i-learned-to-stop-worrying-and-transform-the-data.html">
+<link rel="next" href="chi-squared.html">
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-bookdown.css" rel="stylesheet" />
@@ -301,15 +301,23 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="prerequisites" class="section level1 unnumbered">
-<h1>Prerequisites</h1>
-<p>A prerequisite for this course is a basic proficiency in using R <span class="citation">(R Core Team <a href="#ref-R2017">2017</a>)</span>. The necessary experience will have been gained from completing the <a href="https://robwschlegel.github.io/Intro_R_Workshop/">Intro R Workshop: Data Manipulation, Analysis, and Graphing</a> Workshop that was part of your BCB Core Honours module (i.e. Biostatistics). You will also need a laptop with R and RStudio installed as per the instructions provided in that workshop. If you do not have a personal laptop, most computers in the 5th floor lab will be correctly set up for this purpose.</p>
-
+<div id="generalised-linear-models" class="section level1">
+<h1><span class="header-section-number">Chapter 12</span> Generalised linear models</h1>
+<div id="sign-test" class="section level2">
+<h2><span class="header-section-number">12.1</span> Sign Test</h2>
 </div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-R2017">
-<p>R Core Team. 2017. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="https://www.R-project.org/" class="uri">https://www.R-project.org/</a>.</p>
+<div id="wilcoxon-signed-rank-test" class="section level2">
+<h2><span class="header-section-number">12.2</span> Wilcoxon Signed-Rank Test</h2>
+</div>
+<div id="mann-whitney-wilcoxon-test" class="section level2">
+<h2><span class="header-section-number">12.3</span> Mann-Whitney-Wilcoxon Test</h2>
+</div>
+<div id="kruskal-wallis-test" class="section level2">
+<h2><span class="header-section-number">12.4</span> Kruskal-Wallis Test</h2>
+</div>
+<div id="generalised-linear-models-glm" class="section level2">
+<h2><span class="header-section-number">12.5</span> Generalised linear models (GLM)</h2>
+
 </div>
 </div>
             </section>
@@ -317,8 +325,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="introduction.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="testing-assumptions-or-how-i-learned-to-stop-worrying-and-transform-the-data.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="chi-squared.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
