--- a/_out/distributions.html
+++ b/_out/distributions.html
@@ -32,8 +32,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="index.html">
-<link rel="next" href="introduction.html">
+<link rel="prev" href="graphical-data-displays.html">
+<link rel="next" href="inferences-about-one-or-two-populations.html">
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-bookdown.css" rel="stylesheet" />
@@ -301,15 +301,33 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="prerequisites" class="section level1 unnumbered">
-<h1>Prerequisites</h1>
-<p>A prerequisite for this course is a basic proficiency in using R <span class="citation">(R Core Team <a href="#ref-R2017">2017</a>)</span>. The necessary experience will have been gained from completing the <a href="https://robwschlegel.github.io/Intro_R_Workshop/">Intro R Workshop: Data Manipulation, Analysis, and Graphing</a> Workshop that was part of your BCB Core Honours module (i.e. Biostatistics). You will also need a laptop with R and RStudio installed as per the instructions provided in that workshop. If you do not have a personal laptop, most computers in the 5th floor lab will be correctly set up for this purpose.</p>
-
+<div id="distributions" class="section level1">
+<h1><span class="header-section-number">Chapter 5</span> Distributions</h1>
+<p>Therefore, we must next learn about the different types of data distributions we are likely to encounter in the wild.</p>
+<div id="binomial-distribution" class="section level2">
+<h2><span class="header-section-number">5.1</span> Binomial distribution</h2>
 </div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-R2017">
-<p>R Core Team. 2017. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="https://www.R-project.org/" class="uri">https://www.R-project.org/</a>.</p>
+<div id="poisson-distribution" class="section level2">
+<h2><span class="header-section-number">5.2</span> Poisson distribution</h2>
+</div>
+<div id="continuous-uniform-distribution" class="section level2">
+<h2><span class="header-section-number">5.3</span> Continuous uniform distribution</h2>
+</div>
+<div id="exponential-distribution" class="section level2">
+<h2><span class="header-section-number">5.4</span> Exponential distribution</h2>
+</div>
+<div id="normal-distribution" class="section level2">
+<h2><span class="header-section-number">5.5</span> Normal distribution</h2>
+</div>
+<div id="chi-squared-distribution" class="section level2">
+<h2><span class="header-section-number">5.6</span> Chi-squared distribution</h2>
+</div>
+<div id="student-t-distribution" class="section level2">
+<h2><span class="header-section-number">5.7</span> Student t distribution</h2>
+</div>
+<div id="f-distribution" class="section level2">
+<h2><span class="header-section-number">5.8</span> F distribution</h2>
+
 </div>
 </div>
             </section>
@@ -317,8 +335,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="introduction.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="graphical-data-displays.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="inferences-about-one-or-two-populations.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
